--- a/views/create.ejs
+++ b/views/create.ejs
@@ -1,28 +1,53 @@
 <%- include('header') %>
 
-<div class="ui grid">
-  <div class="four wide column">
-    <a class="avatar avatar-link"
-       href="/posts?author=<%= user._id %>"
-       data-title="<%= user.name %> | <%= ({m: '男', f: '女', x: '保密'})[user.gender] %>"
-       data-content="<%= user.bio %>">
-      <img class="avatar" src="/img/<%= user.avatar %>">
-    </a>
+  <script src="https://unpkg.com/marked@0.3.6"></script>
+  <script src="https://unpkg.com/lodash@4.16.0"></script>
+
+  <div class="ui grid">
+    <div class="four wide column">
+      <a class="avatar avatar-link" href="/posts?author=<%= user._id %>" data-title="<%= user.name %> | <%= ({m: '男', f: '女', x: '保密'})[user.gender] %>"
+        data-content="<%= user.bio %>">
+        <img class="avatar" src="/img/<%= user.avatar %>">
+      </a>
+    </div>
+
+    <div class="eight wide column">
+      <form class="ui form segment" method="post" action="/posts">
+        <div class="field required">
+          <label>标题</label>
+          <input type="text" name="title">
+        </div>
+        <div class="field required">
+          <label>内容</label>
+          <!-- <textarea name="content" rows="15"></textarea> -->
+          <div id="editor">
+            <textarea name="content" rows="30" :value="input" @input="update"></textarea>
+            <div v-html="compiledMarkdown"></div>
+          </div>
+        </div>
+        <input type="submit" class="ui button" value="发布">
+      </form>
+    </div>
   </div>
 
-  <div class="eight wide column">
-    <form class="ui form segment" method="post" action="/posts">
-      <div class="field required">
-        <label>标题</label>
-        <input type="text" name="title">
-      </div>
-      <div class="field required">
-        <label>内容</label>
-        <textarea name="content" rows="15"></textarea>
-      </div>
-      <input type="submit" class="ui button" value="发布">
-    </form>
-  </div>
-</div>
+  <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+  <script>
+    new Vue({
+      el: '#editor',
+      data: {
+        input: '# hello'
+      },
+      computed: {
+        compiledMarkdown: function () {
+          return marked(this.input, { sanitize: true })
+        }
+      },
+      methods: {
+        update: _.debounce(function (e) {
+          this.input = e.target.value
+        }, 300)
+      }
+    })
+  </script>
 
-<%- include('footer') %>
+  <%- include('footer') %>
