--- a/views/create.ejs
+++ b/views/create.ejs
@@ -35,7 +35,7 @@
     new Vue({
       el: '#editor',
       data: {
-        input: '# hello'
+        input: ''
       },
       computed: {
         compiledMarkdown: function () {
